Enhance billing audit and miniprogram integration